
        CHANGES IN spatstat.explore VERSION 3.0-6.010

OVERVIEW

    o Extension to support for one-dimensional smoothing kernels.

    o Bug fixes in plot.fv.
    
    o Internal improvements and bug fixes.

SIGNIFICANT USER-VISIBLE CHANGES

    o kernel.moment
    New arguments 'mean' and 'sd'.
    Computation accelerated for kernel='cosine' or 'optcosine'.
    All cases are now computed using analytic expressions, for m <= 2.
    
BUG FIXES

    o plot.fv
    When the argument 'log' was given, the plotted curves were
    incorrectly clipped, or were missing altogether.
    Fixed.
    
    o plot.fv
    If 'add=TRUE', and if the existing plot was created using logarithmic axes,
    the logarithmic scale was ignored.
    Fixed.
    
    o plot.fv
    Sometimes gave an obscure warning about 'rebound.owin',
    when 'xlim' or 'ylim' was given.
    Fixed.

        CHANGES IN spatstat.explore VERSION 3.0-6

OVERVIEW

    o Internal improvements and bug fixes.

        CHANGES IN spatstat.explore VERSION 3.0-5

OVERVIEW

    o Bug fix in pcf.

    o We thank Maximilian Hesselbarth for contributions.
    
BUG FIXES

    o pcf.ppp
    Estimates were incorrectly scaled (they were incorrectly multiplied
    by the area of the window.) Spotted by Maximilian Hesselbarth.
    Bug introduced in spatstat.explore 3.0-0.
    Fixed.
    

        CHANGES IN spatstat.explore VERSION 3.0-4

OVERVIEW

    o Bug fix in Kest in a very special case.

    o We thank 'Marjolein9' for contributions.
    
BUG FIXES

    o Kest
    Isotropic edge correction weight was computed incorrectly
    for a data point lying exactly on a corner of a rectangular window.
    Spotted by GitHub contributor 'Marjolein9'.
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.0-3

OVERVIEW

    o Tweaks to placate package checker.


        CHANGES IN spatstat.explore VERSION 3.0-2

OVERVIEW

    o Tweaks to placate package checker.


        CHANGES IN spatstat.explore VERSION 3.0-1

OVERVIEW
