@@ -66,6 +66,7 @@ export("bits.envelope")
 export("bits.test")
 export("blur")
 export("bw.abram")
+export("bw.abram.ppp")
 export("bw.CvL")
 export("bw.CvL.adaptive")
 export("bw.CvLHeat")
@@ -552,6 +553,7 @@ S3method("as.data.frame", "fv")
  S3method("as.tess", "quadrattest")
 S3method("auc", "ppp")
 S3method("berman.test", "ppp")
+S3method("bw.abram", "ppp")
    S3method("bw.relrisk", "ppp")
 S3method("cbind", "fv")
 S3method("CDF", "density")
